--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 </head>
 
 <body>
-
   <nav class="navbar navbar-expand-xl navbar-light bg-light" style="background-color: #FAFAFA !important;">
     <a class="navbar-brand" href="https://hungrycat416.github.io/portfolio/">
       My Portfolio
@@ -58,26 +57,13 @@
       <span class="navbar-toggler-icon"></span>
     </button>
   </nav>
-
-
-  <header>
-    <div class="container-fluid justify-content-center align-items-center">
-      <div class="row">
-        <div class="col text-center">
-          <span>
-            <h1 class='header-title mb-3'>ITERATIVE DESIGN</h1>
-            <span style="background-color: #D6B7B5;" class="dot"></span>
-            <span style="background-color: #D6B7B5;" class="dot"></span>
-            <span style="background-color: #D6B7B5;" class="dot"></span>
-            <img src=ip-icon.png class="ip-icon ">
-            <span style="background-color: #D6B7B5;" class="dot"></span>
-            <span style="background-color: #D6B7B5;" class="dot"></span>
-            <span style="background-color: #D6B7B5;" class="dot"></span>
-          </span>
-        </div>
-      </div>
+  <div class="parallax" data-parallax="scroll" data-z-index="1" src="social_media_background.jpeg">
+    
+    <div class="paratext">
+      <img class="outline" src="iterative_redesign_welcome.png">
+      <h1 class='header-title mb-3'>ITERATIVE DESIGN</h1>
     </div>
-  </header>
+  </div>
 
   <div class="h2-2">
     <h2 class="subtitle"> PROJECT INTRODUCTION</h2>
