--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
   <nav class="navbar navbar-expand-xl navbar-light bg-light" style="background-color: #FAFAFA !important;">
-    <a class="navbar-brand" href="https://hungrycat416.github.io/portfolio/">
+    <a class="navbar-brand" href="https://muhiim-mali37.github.io/portfolio/">
       My Portfolio
     </a>
 
